<resources>
    <string name="app_name">Borboleta</string>
    <string name="paginainicio">paginainicio</string>
    <string name="logomariposa">logomariposa</string>
    <string name="backbutton">backbutton</string>
    <string name="nextbutton">nextbutton</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmarcontra">Confirmar contraseña</string>
    <string name="hintnombre">Amalia Lopez</string>
    <string name="hintcorreo">ejemplo@gmail.com</string>
    <string name="hintcontra">abc123</string>
    <string name="hintconfirma">*****</string>
    <string name="telefono">Número de teléfono</string>
    <string name="pronombre">Pronombres</string>
    <string name="hintpronombre">ella</string>
    <string name="cumpleanios">Cumpleaños</string>
    <string name="selecciona">Selecciona:</string>
    <string name="linea">linea</string>
    <string name="elementoCarrousel">TÉRMINOS DE USO</string>
    <string-array name="arraypronombres">
        <item>Ella</item>
        <item>El</item>
        <item>Elle</item>
    </string-array>
    <string name="aviso">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi cras fermentum odio eu. Nisl condimentum id venenatis a condimentum. Luctus accumsan tortor posuere ac ut consequat semper viverra nam. Quis enim lobortis scelerisque fermentum dui faucibus. Erat pellentesque adipiscing commodo elit at imperdiet dui accumsan. Urna duis convallis convallis tellus id interdum velit laoreet id. Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Amet tellus cras adipiscing enim. Commodo ullamcorper a lacus vestibulum sed arcu non odio euismod. Urna duis convallis convallis tellus id. Eget nunc lobortis mattis aliquam faucibus purus in massa tempor. Euismod nisi porta lorem mollis aliquam. Lacinia quis vel eros donec ac odio tempor orci. Mi eget mauris pharetra et ultrices. Eget nunc lobortis mattis aliquam faucibus purus in massa. Non arcu risus quis varius. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Tempor commodo ullamcorper a lacus vestibulum sed. Euismod lacinia at quis risus sed vulputate odio ut.

Fermentum iaculis eu non diam phasellus vestibulum lorem. Euismod nisi porta lorem mollis aliquam ut. Eget arcu dictum varius duis at consectetur lorem. Facilisis gravida neque convallis a cras semper. Porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Amet facilisis magna etiam tempor. Diam in arcu cursus euismod quis viverra nibh. Nullam vehicula ipsum a arcu cursus vitae congue mauris. Posuere lorem ipsum dolor sit amet consectetur. Dolor sit amet consectetur adipiscing elit ut aliquam. Donec adipiscing tristique risus nec feugiat. Elit sed vulputate mi sit amet mauris commodo.

Amet nulla facilisi morbi tempus iaculis urna. Sagittis eu volutpat odio facilisis mauris. Ac odio tempor orci dapibus ultrices. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Sodales neque sodales ut etiam sit. Facilisi cras fermentum odio eu feugiat pretium nibh ipsum. Aenean sed adipiscing diam donec adipiscing tristique risus nec. Lobortis mattis aliquam faucibus purus in massa tempor. Purus in mollis nunc sed id semper risus in. Enim diam vulputate ut pharetra. At erat pellentesque adipiscing commodo elit at. Quis blandit turpis cursus in hac habitasse platea dictumst quisque. Egestas diam in arcu cursus.

Et ligula ullamcorper malesuada proin libero. Phasellus faucibus scelerisque eleifend donec. Est sit amet facilisis magna. Facilisis volutpat est velit egestas dui id ornare arcu. Sed lectus vestibulum mattis ullamcorper velit sed. At in tellus integer feugiat. Vehicula ipsum a arcu cursus. Porttitor eget dolor morbi non arcu. Morbi tristique senectus et netus et malesuada fames ac. Risus at ultrices mi tempus. Adipiscing elit duis tristique sollicitudin nibh. Malesuada fames ac turpis egestas maecenas. Pellentesque sit amet porttitor eget dolor. Cras sed felis eget velit aliquet sagittis id consectetur purus. Adipiscing elit duis tristique sollicitudin nibh sit amet commodo. Turpis egestas integer eget aliquet nibh. Et odio pellentesque diam volutpat commodo sed egestas egestas fringilla. Vulputate enim nulla aliquet porttitor. Odio pellentesque diam volutpat commodo. Duis ut diam quam nulla.

Mi ipsum faucibus vitae aliquet nec ullamcorper. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Facilisis sed odio morbi quis commodo. Amet facilisis magna etiam tempor orci eu lobortis elementum nibh. Eu sem integer vitae justo eget magna fermentum iaculis eu. In iaculis nunc sed augue. Condimentum id venenatis a condimentum. Odio tempor orci dapibus ultrices in iaculis nunc. Sed augue lacus viverra vitae. Sollicitudin ac orci phasellus egestas tellus rutrum tellus pellentesque eu. Massa tempor nec feugiat nisl pretium fusce id velit ut. Cursus mattis molestie a iaculis. Ultrices neque ornare aenean euismod elementum nisi quis. Egestas erat imperdiet sed euismod nisi porta lorem mollis aliquam. Volutpat commodo sed egestas egestas fringilla. Sodales ut eu sem integer vitae justo eget magna.
    </string>
    <string name="accepttext">Aceptar</string>
    <string name="rechazartext">Rechazar</string>
    <string name="bienvenidx_de_regreso">BIENVENIDX DE REGRESO</string>
    <string name="logoborboleta">logoborboleta</string>
    <string name="CorreoLogin">Correo</string>
    <string name="ContraseñaLogin">Contraseña</string>
    <string name="Email">Email</string>
    <string name="ContraseñaInsert">Contraseña</string>
    <string name="inicia_sesi_n">INICIA SESIÓN</string>
    <string name="aun_no_tienes_cuenta_registrate">¿Aun no tienes cuenta? Registrate</string>


    <!--Resources preferences-->
    <string name="primeraPregunta">¿Qué tipo de terapia buscas?</string>
    <string name="segundaPregunta">¿Con qué tipo de personalidad te identificas más?</string>
    <string name="terceraPregunta">¿Cuáles son tus expectativas de ir a terapia?</string>
    <string name="cuartaPregunta">¿Cuál es tu presupuesto esperado a pagar por sesión?</string>
    <string name="quintaPregunta">¿Cuáles son los principales temas que te gustaría tratar en terapia? (selecciona todas las opciones que aplican)</string>
    <string name="sextaPregunta">¿Cómo te definirías más?</string>

    <string name="unoa">Cognitivo conductual</string>
    <string name="unob">Psicoanálisis</string>
    <string name="unoc">Sistémica</string>
    <string name="unod">Humanista</string>
    <string name="dosa">Creativo</string>
    <string name="dosb">Racional</string>
    <string name="tresa">Conocerme mejor</string>
    <string name="tresb">Buscar soluciones a mis problemática</string>
    <string name="tresc">Aprender a manejar mis emociones</string>
    <string name="tresd">Entender la raíz de mis problemas</string>
    <string name="trese">Definir qué hacer en mi futuro</string>
    <string name="cuatroa">300 pesos</string>
    <string name="cuatrob">de 300 a 500 pesos</string>
    <string name="cuatroc">de 500 a 700 pesos.</string>
    <string name="cuatrod">De 700 a 1000 pesos</string>
    <string name="cuatroe">De 1000 a 1300 pesos</string>
    <string name="cuatrof">Más de 1300 pesos</string>
    <string name="cincoa">Estrés</string>
    <string name="cincob">Ansiedad</string>
    <string name="cincoc">Depresión</string>
    <string name="cincod">Problemas familiares</string>
    <string name="cincoe">Relaciones de pareja</string>
    <string name="cincof">Relaciones empresariales</string>
    <string name="cincog">Trastornos de conducta alimentaria</string>
    <string name="cincoh">Orientación profesional y vocacional</string>
    <string name="seisa">Estudiante</string>
    <string name="seisb">Godín</string>
    <string name="seisc">Emprendedor</string>
    <string name="seisd">Intraemprendedor</string>
    <string name="seise">Emprendedor de impacto</string>

    <string name="loremipsum">lorem</string>
    <string name="perfil_creado_de_manera_exitosa">PERFIL CREADO DE MANERA EXITOSA</string>
    <string name="todo">TODO</string>
    <string name="ir_al_men">Ir al menú</string>
    <string name="home">HOME</string>
    <string name="borboleta_podcast">Borboleta podcast</string>
    <string name="podcast_salud_mental">Bienvenido, bienvenida, bienvenide a Borboleta Podcast: el primer espacio para emprendedores que tiene como base la salud emocional. \n \nAquí vamos a aprender y desaprender sobre todo lo relacionado con el emprendimiento y la salud emocional.</string>
    <string name="logo_spotify">Logo_Spotify</string>
    <string name="contenido_reciente">Contenido reciente</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_phasellus_sit_amet_lectus_a_mi_lobortis_iaculis_mauris_odio_tortor_accumsan_vel_gravida_sit_amet_malesuada_a_tortor_cras_mattis_augue_eget_dolor_vestibulum_id_euismod_diam_rutrum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet lectus a mi lobortis iaculis. Mauris odio tortor, accumsan vel gravida sit amet, malesuada a tortor. Cras mattis augue eget dolor vestibulum, id euismod diam rutrum.</string>

    <string name="hearticon"></string>
    <string name="messageicon"></string>
    <string name="profileicon"></string>
    <string name="homeicon"></string>
    <string name="leonardo">Leonardo</string>
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="chat">Chat</string>
    <string name="TextView_chat">TextView</string>
    <string name="chats">Chats</string>
    <string name="textview_title_chats">CHATS</string>

</resources>
