<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Preferencias">

    <ImageButton
        android:id="@+id/backbutton5"
        android:layout_width="15dp"
        android:layout_height="25dp"
        android:background="#0000"
        android:contentDescription="@string/backbutton"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069"
        app:srcCompat="@drawable/backbutton"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/logomariposa"
        android:layout_width="58dp"
        android:layout_height="50dp"
        android:contentDescription="@string/logomariposa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/logomariposa"
        tools:ignore="ImageContrastCheck" />

    <ScrollView
        android:layout_width="415dp"
        android:layout_height="622dp"
        android:contentDescription="@string/confirmarcontra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678">


        <LinearLayout
            android:id="@+id/preguntas"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/primeraPregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/primeraPregunta" />

            <LinearLayout
                android:id="@+id/checkboxesuno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="2dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/unoa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unoa"
                    tools:ignore="DuplicateSpeakableTextCheck">

                </CheckBox>

                <CheckBox
                    android:id="@+id/unob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unob" />

                <CheckBox
                    android:id="@+id/unoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unoc" />

                <CheckBox
                    android:id="@+id/unod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unod" />

            </LinearLayout>

            <TextView
                android:id="@+id/segundaPregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/segundaPregunta" />

            <LinearLayout
                android:id="@+id/checkboxesdos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="2dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/dosa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dosa">

                </CheckBox>

                <CheckBox
                    android:id="@+id/dosb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dosb" />

            </LinearLayout>

            <TextView
                android:id="@+id/terceraPregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/terceraPregunta" />

            <LinearLayout
                android:id="@+id/checkboxestres"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="2dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/tresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tresa">

                </CheckBox>

                <CheckBox
                    android:id="@+id/tresb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tresb" />

                <CheckBox
                    android:id="@+id/tresc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tresc" />

                <CheckBox
                    android:id="@+id/tresd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tresd" />
                <CheckBox
                    android:id="@+id/trese"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trese" />
            </LinearLayout>

            <TextView
                android:id="@+id/cuartaPregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cuartaPregunta" />

            <LinearLayout
                android:id="@+id/checkboxcuatro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="2dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cuatroa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cuatroa">

                </CheckBox>

                <CheckBox
                    android:id="@+id/cuatrob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cuatrob" />

                <CheckBox
                    android:id="@+id/cuatroc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cuatroc" />

                <CheckBox
                    android:id="@+id/cuatrod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cuatrod" />
                <CheckBox
                    android:id="@+id/cuatroe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cuatroe" />
                <CheckBox
                    android:id="@+id/cuatrof"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cuatrof" />


            </LinearLayout>

            <TextView
                android:id="@+id/quintaPregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/quintaPregunta" />

            <LinearLayout
                android:id="@+id/checkboxcinco"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="2dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cincoa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cincoa">

                </CheckBox>

                <CheckBox
                    android:id="@+id/cincob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cincob" />

                <CheckBox
                    android:id="@+id/cincoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cincoc" />

                <CheckBox
                    android:id="@+id/cincod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cincod" />
                <CheckBox
                    android:id="@+id/cincoe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cincoe" />
                <CheckBox
                    android:id="@+id/cincof"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cincof" />
                <CheckBox
                    android:id="@+id/cincog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cincog" />
                <CheckBox
                    android:id="@+id/cincoh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cincoh" />
            </LinearLayout>

            <TextView
                android:id="@+id/sextaPregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sextaPregunta" />

            <LinearLayout
                android:id="@+id/c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="2dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/seisa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seisa">

                </CheckBox>

                <CheckBox
                    android:id="@+id/seisb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seisb" />

                <CheckBox
                    android:id="@+id/seisc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seisc" />

                <CheckBox
                    android:id="@+id/seisd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seisd" />
                <CheckBox
                    android:id="@+id/seise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seise" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/nextbutton5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="#0000"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/nextbutton"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/nextbutton"
                tools:ignore="TouchTargetSizeCheck" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp">
            </TextView>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
